--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Project Magpie</string>
+    <string name="app_name">Magpie</string>
+    <string name="start_new_hunt">Start New Hunt</string>
+    <string name="load_previous_hunt">Load Previous Hunt</string>
+    <string name="join_shared_hunt">Join Shared Hunt</string>
+    <string name="options">Options</string>
+    <string name="coming_soon">Coming Soon</string>
 </resources>
